--- a/.wiki.md
+++ b/.wiki.md
@@ -1,12 +1,13 @@
+```markdown
 # Project Summary
-The Period Tracker ML API is a machine learning-based application designed to provide predictions related to menstrual cycles, fertility, and ovulation. The project integrates FastAPI for the backend, allowing for efficient API development and deployment. It leverages machine learning models to analyze and predict user-specific health data, aiming to empower users with insights into their reproductive health.
+The Period Tracker ML API is a machine learning-powered application designed to predict menstrual cycles, fertility windows, and ovulation dates. This project utilizes various machine learning models, including ARIMA, Random Forest, and Gradient Boosting, to provide personalized health insights based on user data. The backend is built with FastAPI, ensuring efficient API development and deployment, while a PostgreSQL database is used for data storage, enabling robust user data management.
 
 # Project Module Description
-The project is organized into several functional modules:
-- **API Module**: Handles all API endpoints for predictions and training.
-- **ML Module**: Contains machine learning models and related functionalities for preprocessing, training, and evaluation.
-- **Database Module**: Manages database interactions, including model storage and user data management.
-- **Core Module**: Provides configuration and logging functionalities for the application.
+The project consists of several functional modules:
+- **API Module**: Manages all API endpoints for predictions, training, and user interactions.
+- **ML Module**: Contains machine learning models and functionalities for preprocessing, training, and evaluation.
+- **Database Module**: Handles database interactions, including user data management and model storage.
+- **Core Module**: Provides configuration, logging, and utility functions for the application.
 
 # Directory Tree
 ```
@@ -26,7 +27,7 @@ period_tracker_ml/
 │   │   ├── session.py
 │   │   ├── __init__.py
 │   ├── ml/
-│   │   ├── base_model.py
+│   │   ├── models.py
 │   │   ├── model_implementations.py
 │   │   ├── preprocessing.py
 │   │   ├── evaluation.py
@@ -45,6 +46,9 @@ period_tracker_ml/
 │   │   ├── user.py
 │   ├── main.py
 ├── requirements.txt
+├── README.md
+├── Dockerfile
+├── docker-compose.yml
 ├── run.py
 ```
 
@@ -57,25 +61,42 @@ period_tracker_ml/
 - **app/schemas**: Contains schema definitions for API requests and responses.
 - **app/main.py**: The entry point for running the application.
 - **requirements.txt**: Lists all dependencies required for the project.
+- **README.md**: Comprehensive documentation for setup, configuration, and usage.
+- **Dockerfile**: Contains instructions for containerizing the application.
+- **docker-compose.yml**: Simplifies the deployment of the application with PostgreSQL and pgAdmin.
 - **run.py**: Script to run the application.
 
 # Technology Stack
 - **Backend Framework**: FastAPI
-- **Database**: SQLite (via SQLAlchemy)
+- **Database**: PostgreSQL (recommended) or SQLite (for development)
 - **Machine Learning Libraries**: scikit-learn, statsmodels
 - **Data Validation**: Pydantic
 - **Web Server**: Uvicorn
+- **Containerization**: Docker
 
 # Usage
 To set up and run the Period Tracker ML API, follow these steps:
+
 1. **Install Dependencies**:
    ```bash
    pip install -r requirements.txt
    ```
-2. **Run the Application**:
-   ```bash
-   python run.py
-   ```
-3. **Access the API Documentation**: The API documentation can be accessed through the provided endpoints once the application is running.
 
-This concise setup will allow you to run and test the Period Tracker ML API effectively.
+2. **Environment Setup**:
+   Create a `.env` file in the root directory with the necessary configuration variables.
+
+3. **Run the Application**:
+   - **Using Docker** (recommended for ease):
+     ```bash
+     docker-compose up -d
+     ```
+   - **Without Docker** (for local development):
+     ```bash
+     python run.py
+     ```
+
+4. **Access the API Documentation**:
+   Once the application is running, the API documentation can be accessed via interactive documentation endpoints.
+
+This setup will allow you to run and test the Period Tracker ML API effectively.
+```
